--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="/style.css" rel="stylesheet" type="text/css" /><link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://github.com/csc-creator/cali-studioCrea.github.io/tree/main/style.css" rel="stylesheet" type="text/css" /><link href="https://fonts.googleapis.com" rel="preconnect" />
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     
@@ -22,8 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair Display" rel="stylesheet">
-    <script
-        type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });</script>
+  
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -312,7 +311,7 @@
                     <div data-w-id="cbc48001-f82b-591d-c251-d9d4f80a0ce0" class="w-layout-grid home-about-component">
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
-                            <p class="title-section-large black text-split scrub-each-word">&quot;Hi, my name is Lisa.
+                            <p class="title-section-large black text-split scrub-each-word">&quot;Hi, my name is Lila.
                                 I'm a passionate web designer and developer dedicated to helping creatives, non profit
                                 organization, game changers, and small business owners bring their vision to life
                                 online. Whether
@@ -686,7 +685,7 @@
 
 
 
-    <script src="/main2.js" type="text/javascript"></script>
+    <script src="https://github.com/csc-creator/cali-studioCrea.github.io/tree/main/main2.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"></script>
