--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 
 
 
-    <script src="https://github.com/csc-creator/cali-studioCrea.github.io/tree/main/main2.js" type="text/javascript"></script>
+    <script src="main2.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"></script>
