--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="menuLeft">
 
                             <div class="logo_container">
-                                <img src="/img/logo.png"
+                                <img src="img/logo.png"
                                     loading="lazy" alt="" class="image-25" />
 
                             </div>
@@ -190,7 +190,7 @@
                             class="home-portfolio-right-column _21">
                             <div class="home-portfolio-image-wrapper _21">
                                 <div class="wrapper_img_project1 _21">
-                                    <img src="/img/Desktop - 4(18).png" loading="lazy"
+                                    <img src="img/Desktop - 4(18).png" loading="lazy"
                                         alt="screenshot restaurant home page portfolio"
                                         class="img_sticky_portfolio not_sticky food" />
                                 </div>
@@ -211,7 +211,7 @@
                         <div id="w-node-_8cb99d98-2256-c7ea-8775-2270888ce5de-22c4fdbb"
                             class="home-portfolio-right-column _21">
                             <div class="home-portfolio-image-wrapper _21">
-                                <div class="wrapper_img_project1 _21"><img src="/img/Desktop - 1(10).png" loading="lazy"
+                                <div class="wrapper_img_project1 _21"><img src="img/Desktop - 1(10).png" loading="lazy"
                                         alt="screenshot restaurant home page portfolio"
                                         class="img_sticky_portfolio not_sticky food" />
                                 </div>
@@ -235,14 +235,14 @@
 
                     <div data-w-id="917f1eb5-62ba-625c-7f91-cec92a4542d8" class="accordion-item-service slide_right">
                         <div data-w-id="527bb2df-8928-7227-e85b-66b64f2568dd" class="title-item-accordion_service"><img
-                                src="/img/picture_service_1_webdesign.jpg" loading="lazy" width="250"
+                                src="img/picture_service_1_webdesign.jpg" loading="lazy" width="250"
                                 style="display:block;opacity:0"
-                                srcset="/img/picture_service_1_webdesign.jpg 500w, /img/picture_service_1_webdesign.jpg 640w"
+                                srcset="img/picture_service_1_webdesign.jpg 500w, img/picture_service_1_webdesign.jpg 640w"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 12vw, 320px"
                                 alt="a person designing frameworks on a tablet" class="img_accordion" />
                             <h4 class="accordion-title-container slide_up_serv">Web Design</h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="/img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
                             </div>
 
                         </div>
@@ -262,12 +262,12 @@
                         <div data-w-id="b92b9766-b373-28db-7e46-c76dcbf9be0d" class="title-item-accordion_service">
                             <h4 class="accordion-title-container slide_up_serv">Website development </h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="/img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
 
                             </div>
-                            <img src="/img/picture_services2.jpg" loading="lazy" width="250"
+                            <img src="img/picture_services2.jpg" loading="lazy" width="250"
                                 style="display:block;opacity:0"
-                                srcset="/img/picture_services2.jpg 500w, /img/picture_services2.jpg 640w"
+                                srcset="img/picture_services2.jpg 500w, img/picture_services2.jpg 640w"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 10vw, 320px"
                                 alt="picture of different computers" class="img_accordion" />
 
@@ -283,7 +283,7 @@
                         <div data-w-id="7f8298dc-0ced-73fe-0e6b-e512120f0aea" class="title-item-accordion_service">
                             <h4 class="accordion-title-container slide_up_serv">Figma to Website</h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="/img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
                             </div>
 
                         </div>
@@ -555,8 +555,8 @@
                         <a href="#About" class="footer-nav-link">About</a>
                         <a href="#Blog" class="footer-nav-link">Tutorials</a>
                         <a href="#faq" class="footer-nav-link">FAQs</a>
-                        <a href="https://www.pinterest.fr/calistudiocrea/" target="_blank"><img src="/img/badgeRGB.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a>
-                        <a href="https://www.youtube.com/channel/UCa_k3-A4Cfo-QGwhFK9wrRA" target="_blank"><img src="/img/yt_logo_rgb_light.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a></div>
+                        <a href="https://www.pinterest.fr/calistudiocrea/" target="_blank"><img src="img/badgeRGB.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a>
+                        <a href="https://www.youtube.com/channel/UCa_k3-A4Cfo-QGwhFK9wrRA" target="_blank"><img src="img/yt_logo_rgb_light.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a></div>
                    
                         <div class="div-block-52">
                         <div class="footer-legal-links--wrapper"><a data-w-id="62504f25-d25f-6aed-2081-791f73fac75d"
