--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="bar_scroll-inside"></div>
             </div> -->
             <div class="btnContact">
-                <img id="IconContact" src="img/envelope-open-text-solid.png" />
+                <img id="IconContact" src="img/envelope-open-text-solid.svg" />
 
                 <a href="mailto:cali.sttudioCrea.com?subject=Enquiry" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
                     class="home-contact-button w-inline-block"></a>
@@ -983,7 +983,7 @@
                ease: 'expo.out' // ease the entire keyframe block
  },
 
-})
+});
 
         const tlAbout = gsap.timeline({
             paused: true,
