--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
             <!-- <div class="bar_scrolling">
                 <div class="bar_scroll-inside"></div>
             </div> -->
-            <div class="btnContact">
+            <div class="btnContact"><a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
+                    class="home-contact-button w-inline-block">
                 <img id="IconContact" src="img/envelope-open-text-solid.svg" />
 
-                <a href="mailto:cali.sttudioCrea.com?subject=Enquiry" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block"></a>
+                </a>
                 </svg>
 
             </div>
