--- a/index.html
+++ b/index.html
@@ -875,8 +875,9 @@
 
             loop: true,                         //loop
       autoplay: {                         //autoplay
-          delay: 2000,  
+          delay: 3000,  
       },  
+            lazy: true,
             keyboard: {
                 enabled: true,
             },
