--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="style.css" rel="stylesheet" type="text/css" /><link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     
