--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                 alt="a person designing frameworks on a tablet" class="img_accordion" />
                             <h4 class="accordion-title-container slide_up_serv">Web Design</h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="/img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
                             </div>
 
                         </div>
