--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                                 of the website fits with your objectives and sources of inspiration.
                                 <br />‍<br />To help take into account the carbon footprint of a website, a
                                 tree is planted for every website designed or developed. &quot;<br />
-                                <div id="wcb" class="carbonbadge"></div>
-                                <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+                                <div id="wcb" class="carbonbadge wcb-d"></div>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
                             </p>
                             <div id="About" class="home-about-title-wrapper"></div>
                         </div>
