--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                         <div class="line_header hero_tsext1">
                             <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Hello
-                                    and welcome ! My name is Lisa, I build creative and unique websites
+                                    and welcome !I build creative and unique websites
                                     to help artists, creatives, non-profit and businesses who are trying to make a
                                     difference stands out.</p>
                             </h1>
@@ -310,7 +310,7 @@
                     <div data-w-id="cbc48001-f82b-591d-c251-d9d4f80a0ce0" class="w-layout-grid home-about-component">
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
-                            <p class="title-section-large black text-split scrub-each-word">&quot;Hi, my name is Lisa.
+                            <p class="title-section-large black text-split scrub-each-word">&quot;
                                 I'm a passionate web designer and developer dedicated to helping creatives, non profit
                                 organization, game changers, and small business owners bring their vision to life
                                 online. Whether
