--- a/index.html
+++ b/index.html
@@ -278,27 +278,28 @@
                             created are responsive and SEO-friendly. I can assist you in selecting the best solution for
                             your project as a certified Webflow expert who has also worked with WordPress.</p>
                     </div>
-                    <div class="accordion-item-service last-item slide_right">
-                        <div data-w-id="7f8298dc-0ced-73fe-0e6b-e512120f0aea" class="title-item-accordion_service">
-                            <h4 class="accordion-title-container slide_up_serv">Figma to Website</h4>
+ 
+                    <div class="accordion-item-service slide_right">
+                        <div data-w-id="b92b9766-b373-28db-7e46-c76dcbf9be0d" class="title-item-accordion_service">
+                            <h4 class="accordion-title-container slide_up_serv">Web Design to finished websites </h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="/img/chevron-down-solid.svg" />
+
                             </div>
+                            <img src="img/Picture_pc_services3.jpg" loading="lazy" width="250"
+                                style="display:block;opacity:0"
+                                srcset="img/Picture_pc_services3.jpg 500w, img/Picture_pc_services3.jpg 640w"
+                                sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 10vw, 320px"
+                                alt="picture of different computers" class="img_accordion" />
 
                         </div>
-                        <img src="img/Picture_pc_services3.jpg" loading="lazy" width="250"
-                            style="display:block;opacity:0"
-                            srcset="img/Picture_pc_services3.jpg 500w, /img/Picture_pc_services3.jpg 640w"
-                            sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 10vw, 320px"
-                            alt="picture of semeone typing on a computer" class="img_accordion" />
-           
-
+                        <p style="display:none;opacity:0;-webkit-transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);color:rgb(226,210,188)"
+                            class="accordion-text-services premier-service">You already have your design and just need
+                            to turn it into a website.Send me your files (Figma, Adobe XD, etc.), and I&#x27;ll create
+                            your website (Webflow or Wordpress) based on your design (text, images, etc.). I'll
+                            also make certain that your website is mobile-friendly.</p>
                     </div>
-                    <p style="display:block;opacity:0;-webkit-transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0) ;-moz-transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 42px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);color:rgb(226,210,188)"
-                        class="accordion-text-services premier-service">You already have your design and just need
-                        to turn it into a website.Send me your files (Figma, Adobe XD, etc.), and I&#x27;ll create
-                        your website (Webflow or Wordpress) based on your design (text, images, etc.). I&#x27;ll
-                        also make certain that your website is mobile-friendly.</p>
+                  
                 </div>
             </div>
 
