--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block">  <img id="IconContact" src="img/envelope-open-text-solid.svg" /></a>
+                    class="home-contact-button w-inline-block">  <img id="IconContact" src="img/comments-regular.svg" /></a>
                 </svg>
 
             </div>
