--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="menuLeft">
 
                             <div class="logo_container">
-                                <img src="/img/logo.png"
+                                <img src="img/logo.png"
                                     loading="lazy" alt="" class="image-25" />
 
                             </div>
