--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block">  <img id="IconContact" src="img/comments-regular.svg" /></a>
+                    class="home-contact-button w-inline-block">  <img id="IconContact" src="img/comments-regular.svg" alt="icon contact"/></a>
                 </svg>
 
             </div>
@@ -139,7 +139,7 @@
 
                             <div class="logo_container">
                                 <img src="img/logo.png"
-                                    loading="lazy" alt="" class="image-25" />
+                                    loading="lazy" alt="logo" class="image-25" />
 
                             </div>
                             <p id="websiteName">Cali Creative Studio</p>
@@ -425,14 +425,14 @@
 
                   <div class="Wrapper_container_blog">
                         <div class="BlogSection">
-                        <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank"><img src="img/carouselinifintetuto.png" /></a>
+                        <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank"><img src="img/carouselinifintetuto.png" alt="thumbnail of the tutorial"/></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
                         </div>
                     </div>
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=rGERIz_R6gI" target="_blank"><img src="img/stackingcards.png" /></a>
+                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=rGERIz_R6gI" target="_blank"><img src="img/stackingcards.png" alt="thumbnail of the tutorial" /></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
@@ -446,7 +446,7 @@
                         </div>
                     </div>    
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank"><img src="img/cmsCollectionTiny.png" /></a>
+                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank"><img src="img/cmsCollectionTiny.png" alt="thumbnail of the tutorial" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
@@ -470,7 +470,7 @@
                         <div class="w-layout-grid grid_faq">
                             <div class="leftcol_faq">
                                 <h2 class="title-medium-gold white">FAQs</h3>
-                                    <h3 class="heading-32">Frequently Asked Questions</h1>
+                                    <h3 class="heading-32">Frequently Asked Questions</h3>
                             </div>
                             <div class="rightcol_faq">
 
@@ -566,7 +566,7 @@
                         <a href="#Blog" class="footer-nav-link">Tutorials</a>
                         <a href="#faq" class="footer-nav-link">FAQs</a>
                         <a href="https://www.pinterest.fr/calistudiocrea/" target="_blank"><img src="img/badgeRGB.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a>
-                        <a href="https://www.youtube.com/channel/UCa_k3-A4Cfo-QGwhFK9wrRA" target="_blank"><img src="img/yt_logo_rgb_light.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a></div>
+                        <a href="https://www.youtube.com/channel/UCa_k3-A4Cfo-QGwhFK9wrRA" target="_blank"><img src="img/yt_logo_rgb_light.png" loading="lazy" alt="youtube channel" class="icon_social" /></a></div>
                    
                         <div class="div-block-52">
                         <div class="footer-legal-links--wrapper"><a data-w-id="62504f25-d25f-6aed-2081-791f73fac75d"
