--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                 alt="a person designing frameworks on a tablet" class="img_accordion" />
                             <h4 class="accordion-title-container slide_up_serv">Web Design</h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" alt="icon chevron down" />
                             </div>
 
                         </div>
@@ -260,7 +260,7 @@
                         <div data-w-id="b92b9766-b373-28db-7e46-c76dcbf9be0d" class="title-item-accordion_service">
                             <h4 class="accordion-title-container slide_up_serv">Website development </h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" alt="icon chevron down"/>
 
                             </div>
                             <img src="img/picture_services2.jpg" loading="lazy" width="250"
@@ -282,7 +282,7 @@
                         <div data-w-id="b92b9766-b373-28db-7e46-c76dcbf9be0d" class="title-item-accordion_service">
                             <h4 class="accordion-title-container slide_up_serv">Web Design to finished websites </h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" alt="icon chevron down"/>
 
                             </div>
                             <img src="img/Picture_pc_services3.jpg" loading="lazy" width="250"
