--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block">  <img id="IconContact" src="img/comments-regular.svg" alt="icon contact"/></a>
+                    class="home-contact-button w-inline-block" aria-label="Contact cali studio crea">  <img id="IconContact" src="img/comments-regular.svg" alt="icon contact"/></a>
                 </svg>
 
             </div>
@@ -425,7 +425,7 @@
 
                   <div class="Wrapper_container_blog">
                         <div class="BlogSection">
-                        <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank"><img src="img/carouselinifintetuto.png" alt="thumbnail of the tutorial"/></a>
+                        <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank" aria-label="link to the tutorial how to create a infinite carousel in webflow" /><img src="img/carouselinifintetuto.png" alt="thumbnail of the tutorial"/></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
@@ -439,14 +439,14 @@
                         </div>
                     </div>   
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank"><img src="img/rotationtuto.png" /></a>
+                        <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank" aria-label="link to the tutorial on how to create rotation of a button in webflow "><img src="img/rotationtuto.png" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
                         </div>
                     </div>    
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank"><img src="img/cmsCollectionTiny.png" alt="thumbnail of the tutorial" /></a>
+                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank" aria-label="link to the tutorial on how to create a CMS Collection in webflow "><img src="img/cmsCollectionTiny.png" alt="thumbnail of the tutorial" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
@@ -553,7 +553,7 @@
             <footer class="fn-footer-first wf-section">
                 <div class="home-contact-grid-container ">
                     <div id="contact" class="contact_row is_1">
-                         <h3 class="title-section-large footer-splitting"><a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" >Interested in working together ?<br />
+                         <h3 class="title-section-large footer-splitting"><a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" aria-label="link to contact Cali creative studio" >Interested in working together ?<br />
                             contact@studiocali.com</a></h3>
                     </div>
                 </div><a href="#hero" data-w-id="62504f25-d25f-6aed-2081-791f73fac734" style="display:none"
@@ -565,8 +565,8 @@
                         <a href="#About" class="footer-nav-link">About</a>
                         <a href="#Blog" class="footer-nav-link">Tutorials</a>
                         <a href="#faq" class="footer-nav-link">FAQs</a>
-                        <a href="https://www.pinterest.fr/calistudiocrea/" target="_blank"><img src="img/badgeRGB.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a>
-                        <a href="https://www.youtube.com/channel/UCa_k3-A4Cfo-QGwhFK9wrRA" target="_blank"><img src="img/yt_logo_rgb_light.png" loading="lazy" alt="youtube channel" class="icon_social" /></a></div>
+                        <a href="https://www.pinterest.fr/calistudiocrea/" target="_blank" aria-label="link to Cali Creative studio Pinterest"><img src="img/badgeRGB.png" loading="lazy" alt="pinterest logo" class="icon_social" /></a>
+                        <a href="https://www.youtube.com/channel/UCa_k3-A4Cfo-QGwhFK9wrRA" target="_blank" aria-label="link to Cali Creative studio youtube Channel"><img src="img/yt_logo_rgb_light.png" loading="lazy" alt="youtube channel" class="icon_social" /></a></div>
                    
                         <div class="div-block-52">
                         <div class="footer-legal-links--wrapper"><a data-w-id="62504f25-d25f-6aed-2081-791f73fac75d"
