--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                         <div class="line_header hero_tsext1">
                             <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Hello
-                                    and welcome !I build creative and unique websites
+                                    and welcome ! My name is Lila. I build creative and unique websites
                                     to help artists, creatives, non-profit and businesses who are trying to make a
                                     difference stands out.</p>
                             </h1>
@@ -179,7 +179,7 @@
                         <div id="w-node-_13caf499-a882-ae3b-09ff-1bddc4512cd0-22c4fdbb"
                             class="home-portfolio-left-column not_sticky">
                             <div class="home-portfolio-text-wrapper not_sticky">
-                                <h3 class="h3 text-first-row slide_up_portf">Webflow + content writing</h3>
+                                <h4 class="h3 text-first-row slide_up_portf">Webflow + content writing</h4>
                                 <h3 class="text-seond-row slide_up_portf">Restaurant</h3>
                                 <p class="small-text-muted-90 slide_up_portf">Landing page designed for a restaurant</p>
                             </div>
@@ -200,8 +200,8 @@
                         <div id="w-node-_8cb99d98-2256-c7ea-8775-2270888ce5c7-22c4fdbb"
                             class="home-portfolio-left-column not_sricky">
                             <div class="home-portfolio-text-wrapper not_sticky _2">
-                                <h3 class="h3 text-first-row slide_up_portf">Wordpress development + content writing
-                                </h3>
+                                <h4 class="h3 text-first-row slide_up_portf">Wordpress development + content writing
+                                </h4>
                                 <h3 class="text-seond-row slide_up_portf">Innovation &amp; Research</h3>
                                 <p class="small-text-muted-90 slide_up_portf">Website for a research public entity</p>
                             </div>
