--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="description" content="Discover our creative studio's portfolio of designed and expertly developed 
+        websites. We specialize in crafting creatives and unique website for artists, non-profits, creatives and businesses
+        who want to make a difference. Work with me to bring your online vision to life">
     <link href="style.css" rel="stylesheet" type="text/css" />
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
