--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
 
                     <div data-w-id="917f1eb5-62ba-625c-7f91-cec92a4542d8" class="accordion-item-service slide_right">
                         <div data-w-id="527bb2df-8928-7227-e85b-66b64f2568dd" class="title-item-accordion_service"><img
-                                src="img/picture_service_1_webdesign.jpg" loading="lazy" width="250"
+                                src="img/picture_service_1_webdesign-1.webp" loading="lazy" width="250"
                                 style="display:block;opacity:0"
-                                srcset="img/picture_service_1_webdesign.jpg 500w, /img/picture_service_1_webdesign.jpg 640w"
+                                srcset="img/picture_service_1_webdesign-1.webp 500w, /img/picture_service_1_webdesign-1.webp 640w"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 12vw, 320px"
                                 alt="a person designing frameworks on a tablet" class="img_accordion" />
                             <h4 class="accordion-title-container slide_up_serv">Web Design</h4>
@@ -266,9 +266,9 @@
                                 <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" alt="icon chevron down"/>
 
                             </div>
-                            <img src="img/picture_services2.jpg" loading="lazy" width="250"
+                            <img src="img/picture_services2-1.webp" loading="lazy" width="250"
                                 style="display:block;opacity:0"
-                                srcset="img/picture_services2.jpg 500w, /img/picture_services2.jpg 640w"
+                                srcset="img/picture_services2-1.webp 500w, /img/picture_services2-1.webp 640w"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 10vw, 320px"
                                 alt="picture of different computers" class="img_accordion" />
 
@@ -288,9 +288,9 @@
                                 <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" alt="icon chevron down"/>
 
                             </div>
-                            <img src="img/Picture_pc_services3.jpg" loading="lazy" width="250"
+                            <img src="img/Picture_pc_services3-1.webp" loading="lazy" width="250"
                                 style="display:block;opacity:0"
-                                srcset="img/Picture_pc_services3.jpg 500w, img/Picture_pc_services3.jpg 640w"
+                                srcset="img/Picture_pc_services3-1.webp 500w, img/Picture_pc_services3-1.webp 640w"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 23vw, (max-width: 991px) 10vw, (max-width: 1279px) 11vw, (max-width: 1919px) 10vw, 320px"
                                 alt="picture of different computers" class="img_accordion" />
 
@@ -428,28 +428,32 @@
 
                   <div class="Wrapper_container_blog">
                         <div class="BlogSection">
-                        <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank" aria-label="link to the tutorial how to create a infinite carousel in webflow" /><img src="img/carouselinifintetuto.png" alt="thumbnail of the tutorial"/></a>
+                        <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank" aria-label="link to the tutorial how to create a infinite carousel in webflow" />
+                            <img src="img/carouselinifintetuto.webp" alt="thumbnail of the tutorial"/></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
                         </div>
                     </div>
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=rGERIz_R6gI" target="_blank"><img src="img/stackingcards.png" alt="thumbnail of the tutorial" /></a>
+                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=rGERIz_R6gI" target="_blank">
+                            <img src="img/stackingcards.webp" alt="thumbnail of the tutorial" /></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
                         </div>
                     </div>   
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank" aria-label="link to the tutorial on how to create rotation of a button in webflow "><img src="img/rotationtuto.png" /></a>
+                        <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank" aria-label="link to the tutorial on how to create rotation of a button in webflow ">
+                            <img src="img/stackingcards.webp" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
                         </div>
                     </div>    
                     <div class="BlogSection">
-                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank" aria-label="link to the tutorial on how to create a CMS Collection in webflow "><img src="img/cmsCollectionTiny.png" alt="thumbnail of the tutorial" /></a>
+                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank" aria-label="link to the tutorial on how to create a CMS Collection in webflow ">
+                            <img src="img/carouselinifintetuto.webp" alt="thumbnail of the tutorial" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
