--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     </div>   
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank" aria-label="link to the tutorial on how to create rotation of a button in webflow ">
-                            <img src="img/stackingcards.webp" /></a>
+                            <img src="img/stackingcards.webp" alt="thumbnail of the tutorial" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
