--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             class="home-portfolio-right-column _21">
                             <div class="home-portfolio-image-wrapper _21">
                                 <div class="wrapper_img_project1 _21">
-                                    <img src="img/Desktop - 4(18).png" loading="lazy"
+                                    <img src="img/Desktop - 4(18).webp" loading="lazy"
                                         alt="screenshot restaurant home page portfolio"
                                         class="img_sticky_portfolio not_sticky food" />
                                 </div>
@@ -212,7 +212,7 @@
                         <div id="w-node-_8cb99d98-2256-c7ea-8775-2270888ce5de-22c4fdbb"
                             class="home-portfolio-right-column _21">
                             <div class="home-portfolio-image-wrapper _21">
-                                <div class="wrapper_img_project1 _21"><img src="img/Desktop - 1(10).png" loading="lazy"
+                                <div class="wrapper_img_project1 _21"><img src="img/Desktop - 1(10)-1.webp" loading="lazy"
                                         alt="screenshot restaurant home page portfolio"
                                         class="img_sticky_portfolio not_sticky food" />
                                 </div>
