--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block" aria-label="Contact cali studio crea">  <img id="IconContact" src="img/comments-regular.svg" alt="icon contact"/></a>
+                    class="home-contact-button w-inline-block" aria-label="link to contact Cali creative studio">  <img id="IconContact" src="img/comments-regular.svg" alt="icon contact"/></a>
                 </svg>
 
             </div>
