--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                   <div class="tuto">
                     <h2 class="title-medium-gold">TUTORIALS</h2>
                   </div>
-                  <h3 class="bold-text-8">Articles, tutorials, and tips to help you create visually appealing and
+                  <h3 class="bold-text-Tuto">Articles, tutorials, and tips to help you create visually appealing and
                     functional websites.</h3>
                 </div>
 
