--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                             <div class="logo_container">
                                 <img src="img/logo.png"
-                                    loading="lazy" alt="logo" class="image-25" />
+                                    loading="lazy" alt="Logo of the website cali creative studio" class="image-25" />
 
                             </div>
                             <p id="websiteName">Cali Creative Studio</p>
@@ -426,7 +426,7 @@
                   <div class="Wrapper_container_blog">
                         <div class="BlogSection">
                         <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank" aria-label="link to the tutorial how to create a infinite carousel in webflow" />
-                            <img src="img/carouselinifintetuto.png" alt="thumbnail of the tutorial"/></a>
+                            <img src="img/cmsCollectionTiny.png" alt="thumbnail of the youtube tutorial on how to create a CMS collection in webflow"/></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
@@ -434,7 +434,7 @@
                     </div>
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=rGERIz_R6gI" target="_blank">
-                            <img src="img/stackingcards.png" alt="thumbnail of the tutorial" /></a>
+                            <img src="img/stackingcards.png" alt="thumbnail of the youtube tutorial on how to create a stacking cards effect in webflow" /></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
@@ -442,7 +442,7 @@
                     </div>   
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank" aria-label="link to the tutorial on how to create rotation of a button in webflow ">
-                            <img src="img/stackingcards.png" alt="thumbnail of the tutorial" /></a>
+                            <img src="img/rotationtuto.png" alt="thumbnail of the youtube tutorial on how to spin your badges like a pro in webflow" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
@@ -450,7 +450,7 @@
                     </div>    
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank" aria-label="link to the tutorial on how to create a CMS Collection in webflow ">
-                            <img src="img/carouselinifintetuto.png" alt="thumbnail of the tutorial" /></a>
+                            <img src="img/carouselinifintetuto.png" alt="thumbnail of the youtube tutorial on how to create an infinite carousel in webflow" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
