--- a/index.html
+++ b/index.html
@@ -699,7 +699,6 @@
 
 
 
-    <script async src="main2.js" type="text/javascript"></script>
 
     <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"></script>
@@ -978,7 +977,16 @@
         }
         );
 
+const service = gsap.utils.toArray(".title-item-accordion_service1");
+        service.forEach((itemAcc)  => {
+        let accordion = itemAcc.querySelector(".img_accordion1");
+        const tlAcc = new TimelineMax({ paused: true, reversed: true });
+        tlAcc.fromTo(accordion, {opacity:0},{opacity:1})
+        tlAcc.reversed(true);
 
+        itemAcc.addEventListener("mouseenter", () => tlAcc.play());
+        itemAcc.addEventListener("mouseleave",() => tlAcc.reverse());
+        });
         var ProcessTl = gsap.timeline(
             {
                 scrollTrigger: {
