--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
 
 
-    <script defer src="https://unpkg.com/split-type"></script>
+    <script src="https://unpkg.com/split-type"></script>
  <script>
         gsap.registerPlugin(ScrollTrigger);
         
