--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,16 @@
                 opacity: 1,
 
             });
+         TlContact.fromTo("#IconContact", {
+            x: 100,
+            opacity: 0,
+            display: "flex",
+        },
+            {
+                x: 0,
+                opacity: 1,
+
+            });
 
         const tlAbout = gsap.timeline({
             paused: true,
