--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
     <script defer src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
 
-    <script async src="/main2.js" type="text/javascript"></script>
+    <script async src="main2.js" type="text/javascript"></script>
 
     <script src="https://unpkg.com/split-type"></script>
  <script>
