--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
     </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"
         type="text/javascript"></script>
 
 
@@ -707,7 +707,7 @@
     <script defer src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
 
-    <script async src="main2.js" type="text/javascript"></script>
+    <script defer src="main2.js" type="text/javascript"></script>
 
     <script src="https://unpkg.com/split-type"></script>
  <script>
