--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
   
     <script defer src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-
+  <script defer src="main2.js" type="text/javascript"></script>
   
 
     <script async src="https://unpkg.com/split-type"></script>
