--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
   <script defer src="main2.js" type="text/javascript"></script>
   
 
-    <script async src="https://unpkg.com/split-type"></script>
+    <script  src="https://unpkg.com/split-type"></script>
  <script>
         gsap.registerPlugin(ScrollTrigger);
         
