--- a/index.html
+++ b/index.html
@@ -700,13 +700,13 @@
 
 
 
-    <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
+    <script  async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/EasePack.min.js"></script>
   
     <script defer src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-  <script defer src="main2.js" type="text/javascript"></script>
+  <script async src="main2.js" type="text/javascript"></script>
   
 
     <script  src="https://unpkg.com/split-type"></script>
